form-group css was breaking layout

--- a/resources/css/wet-custom.css
+++ b/resources/css/wet-custom.css
@@ -63,8 +63,8 @@ legend {
 }
 
 .form-group {
-	padding-left: 15px;
-	padding-right: 15px;
+	/* padding-left: 15px; */
+	/* padding-right: 15px; */
 }
 
 .pagination {
